@@ -45,9 +45,6 @@ span.mw-blocklist-actions {
 .mw-uctop {
 	font-weight: bold;
 }
-.mw-contributions-form select {
-	vertical-align: middle;
-}
 
 /* Special:EditWatchlist */
 .watchlistredir {
