@@ -9,6 +9,7 @@ production.
 * The load.php entry point now enforces the existing policy of not allowing
   access to session data, which includes the session user and the session
   user's language. If such access is attempted, an exception will be thrown.
+* The SpecialContributions::getForm::filters hook has been removed.
 
 === New features in 1.28 ===
 * User::isBot() method for checking if an account is a bot role account.
